...
                          return ListView(
                            physics: const AlwaysScrollableScrollPhysics(),
                            children: [
                              const SizedBox(height: 12),
                              if (data.promotions.isNotEmpty) ...[
                                Text(
                                  'АКЦИИ',
                                  style: TextStyle(
                                    fontFamily: 'Inter',
                                    fontWeight: FontWeight.w900,
                                    fontSize: 20 * scale,
                                    letterSpacing: 0.8,
                                    color:
...
